Bug 453830 - Plasma unable to detect installed styles
Summary: Plasma unable to detect installed styles
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_desktoptheme (other bugs)
Version First Reported In: 5.24.5
Platform: Arch Linux Linux
: VHI major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 453848 453921 453974 454035 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-15 14:18 UTC by Ardith Metz
Modified: 2022-05-19 07:52 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ardith Metz 2022-05-15 14:18:02 UTC
SUMMARY
***
After update plasma-frameworks package to 5.94 from 5.93 plasma is unable to detect installed styles (system-settings ->Appearance-> Plasma styles doesn't contain styles installed in /usr/share/plasma/desktoptheme path. It still detects styles from ~/.local/share/plasma/desktoptheme/ though. This leads to various visual glitches when no style is used.

Downgrading package back to 5.93 fixes the problem (all installed in /usr/share/plasma/desktoptheme styles are detected again)
***


STEPS TO REPRODUCE
1. Update plasma-frameworks to 5.94
2. Navigate to System-settings -> Appearance-> Plasma styles

OBSERVED RESULT
Plasma styles from /usr/share/plasma/desktoptheme aren't detected

EXPECTED RESULT
Plasma styles from /usr/share/plasma/desktoptheme are detected

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.24.5
KDE Frameworks Version: 5.94
Qt Version: 5.15.4
Comment 1 Ardith Metz 2022-05-15 15:39:58 UTC
Adding to he above:

In plasma-frameworks 5.94 copying /usr/share/plasma/desktoptheme/default to ~/.local/share/plasma/desktoptheme/ doesn't make it detectable but if I copy /usr/share/plasma/desktoptheme/default from 5.93 version to ~/.local/share/plasma/desktoptheme/ then it is detected even in 5.94. This may mean the theme format from 5.94 isn't recognized why the old theme format still is.

The suspicious change is https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/501
Comment 2 Antonio Rojas 2022-05-15 19:51:35 UTC
*** Bug 453848 has been marked as a duplicate of this bug. ***
Comment 3 Rik Mills 2022-05-16 05:45:04 UTC
On Kubuntu with 5.94.0, downloaded theme from store.k.o show but system installed themes such as the breeze variants do not.
Comment 4 Rik Mills 2022-05-16 07:24:32 UTC
reverting the src/desktoptheme changes appears to fix issue, but presumably another fix to make this change work is more appropriate
Comment 7 Fushan Wen 2022-05-16 08:46:14 UTC
Git commit 10aa9bb8dca91e92e3009ed57613d43d610da63e by Fushan Wen.
Committed on 16/05/2022 at 08:19.
Pushed by fusionfuture into branch 'master'.

kcms/desktoptheme: find metadata.json when loading ThemesModel

Before this commit ThemesModel only finds metadata.desktop, but after
KF5.94, the default theme metadata files have been ported to json format.

M  +9    -1    kcms/desktoptheme/themesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/10aa9bb8dca91e92e3009ed57613d43d610da63e
Comment 8 Fushan Wen 2022-05-16 08:46:48 UTC
Git commit f77b7284e39b14b0e9a8b4d2b77c0b93b2c9ea59 by Fushan Wen.
Committed on 16/05/2022 at 08:46.
Pushed by fusionfuture into branch 'Plasma/5.24'.

kcms/desktoptheme: find metadata.json when loading ThemesModel

Before this commit ThemesModel only finds metadata.desktop, but after
KF5.94, the default theme metadata files have been ported to json format.


(cherry picked from commit 10aa9bb8dca91e92e3009ed57613d43d610da63e)

M  +9    -1    kcms/desktoptheme/themesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/f77b7284e39b14b0e9a8b4d2b77c0b93b2c9ea59
Comment 10 Alexander Lohnau 2022-05-16 13:20:52 UTC
Git commit 43ae993da35bb408b4fabb5c4514feff97628e0d by Alexander Lohnau.
Committed on 16/05/2022 at 12:49.
Pushed by fusionfuture into branch 'master'.

kcms/desktoptheme: Fix reading of metadata in ThemesModel

We can not use KConfig to read the desktop file.

M  +19   -8    kcms/desktoptheme/themesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/43ae993da35bb408b4fabb5c4514feff97628e0d
Comment 11 Fushan Wen 2022-05-16 13:21:43 UTC
Git commit ae7adb368f52c0b7bf510e3c9cf12e368940745a by Fushan Wen, on behalf of Alexander Lohnau.
Committed on 16/05/2022 at 13:21.
Pushed by fusionfuture into branch 'Plasma/5.24'.

kcms/desktoptheme: Fix reading of metadata in ThemesModel

We can not use KConfig to read the desktop file.


(cherry picked from commit 43ae993da35bb408b4fabb5c4514feff97628e0d)

M  +19   -8    kcms/desktoptheme/themesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/ae7adb368f52c0b7bf510e3c9cf12e368940745a
Comment 12 Antonio Rojas 2022-05-17 06:31:25 UTC
*** Bug 453921 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2022-05-18 16:13:20 UTC
*** Bug 453974 has been marked as a duplicate of this bug. ***
Comment 14 Antonio Rojas 2022-05-19 07:52:39 UTC
*** Bug 454035 has been marked as a duplicate of this bug. ***